crates/compiler/test_syntax/tests/snapshots/pass/closure_in_binop.expr.formatted.roc
a
&& (\x -> x)
    8