crates/compiler/test_syntax/tests/snapshots/fail/inline_hastype.expr.roc
main =
    (\x -> x) : I64

    3
